# L2

./: Cargo.toml
task_1/: Cargo.toml  test.txt
task_1/src/: main.rs  wc_cli.rs
task_10/: Cargo.toml
task_10/src/: client.rs  server.rs  telnet_cli.rs
task_10/src/telnet/: cli.rs  client.rs  mod.rs
task_11/: .env  Cargo.toml
task_11/src/: main.rs
task_11/src/api/: create_event.rs  data_for_request.rs  data_for_response.rs  delete_event.rs  events_for_day.rs  events_for_month.rs  events_for_week.rs  logger_middleware.rs  mod.rs  update_event.rs
task_11/src/app/: mod.rs
task_11/src/domain/: errors.rs  events.rs  filters.rs  mod.rs  note_repository.rs  note_service.rs
task_11/src/infrastructe/: mod.rs  repository.rs  state.rs  utils.rs
task_12-16/: Cargo.toml
task_12-16/src/: lib.rs  task_12.rs  task_13.rs  task_14.rs  task_15.rs  task_16.rs
task_2/src/: lib.rs  unpack.rs
task_3/: Cargo.toml  month.txt  num.txt  text_input.txt  with_suffix.txt
task_3/src/: main.rs
task_3/src/cli/: mod.rs  sort_cli.rs  utils.rs
task_4/: Cargo.toml
task_4/src/: main.rs
task_5/: Cargo.toml  text.txt
task_5/src/: main.rs
task_5/src/grep_cli/: cli.rs  grep_cli.rs  mod.rs  options.rs
task_6/: Cargo.toml
task_6/src/: cli.rs  main.rs
task_7/: Cargo.toml
task_7/src/: main.rs
task_7/src/lf_cli/: cli.rs  mod.rs
task_8/: Cargo.toml
task_8/src/: main.rs  shell_cli.rs
task_9/: Cargo.toml
task_9/site/: 1727123607.html
task_9/site/links/: crates-io.7fabf35348a9cd393dbb6f602248a023.css  manifest.webmanifest
task_9/src/: main.rs
(+8 files in other folders)
