[package]
name = "task_11"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
thiserror = "1.0.64"
async-trait = "0.1.83"
serde_json = "1.0.128"
dotenv = "0.15.0"
log = "0.4.22"
env_logger = "0.11.5"


[dependencies.chrono]
version="0.4.38"
features=["serde"]


[dependencies.axum]
version="0.7.6"


[dependencies.tokio]
version="1.40.0"
features=["sync","macros","rt-multi-thread","time"]


[dependencies.uuid]
version = "1.10.0"
features = ["v4","serde"]


[dependencies.serde]
version = "1.0.210"
features = ["derive","rc"]